// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectors: Tracking Domains selectDefaultTrackingDomainsOptions should return system default when no default options 1`] = `
Array [
  Object {
    "label": "Always Use Default (Currently System Default)",
    "value": "",
  },
]
`;

exports[`Selectors: Tracking Domains selectDefaultTrackingDomainsOptions should return the default domain when specified 1`] = `
Array [
  Object {
    "label": "Always Use Default (Currently 4.com)",
    "value": "",
  },
]
`;

exports[`Selectors: Tracking Domains selectTrackingDomainsList should return a transformed array if list is present 1`] = `
Array [
  Object {
    "domain": "1.com",
    "status": "verified",
    "verified": true,
  },
  Object {
    "domain": "2.com",
    "status": "blocked",
    "verified": false,
  },
  Object {
    "domain": "3.com",
    "status": "unverified",
    "verified": false,
  },
  Object {
    "default": true,
    "domain": "4.com",
    "status": "verified",
    "verified": true,
  },
]
`;

exports[`Selectors: Tracking Domains selectTrackingDomainsOptions should return default and all verified tracking domain options 1`] = `
Array [
  Object {
    "label": "Always Use Default (Currently 4.com)",
    "value": "",
  },
  Object {
    "label": "1.com",
    "value": "1.com",
  },
  Object {
    "label": "4.com",
    "value": "4.com",
  },
]
`;

exports[`Selectors: Tracking Domains selectUnverifiedTrackingDomains should return a list of unverified domains 1`] = `
Array [
  Object {
    "domain": "2.com",
    "status": "blocked",
    "verified": false,
  },
  Object {
    "domain": "3.com",
    "status": "unverified",
    "verified": false,
  },
]
`;

exports[`Selectors: Tracking Domains selectVerifiedTrackingDomains should return a list of verified domains 1`] = `
Array [
  Object {
    "domain": "1.com",
    "status": "verified",
    "verified": true,
  },
  Object {
    "default": true,
    "domain": "4.com",
    "status": "verified",
    "verified": true,
  },
]
`;

exports[`Selectors: Tracking Domains selectVerifiedTrackingDomainsOptions should return a list of tracking domains formatted as options 1`] = `
Array [
  Object {
    "label": "1.com",
    "value": "1.com",
  },
  Object {
    "label": "4.com",
    "value": "4.com",
  },
]
`;
